# rust-cli-orm

./: .env  Cargo.toml
cli_lib/: Cargo.toml
migrations/2020-02-19-213952_create_init_tables/: up.sql
src/: lib.rs  main.rs  models.rs  schema.rs
