[package]
name = "cli_db"
version = "0.1.0"
authors = ["andzac <andrea.zaccaro@outlook.it>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "cli_lib"
path = "src/lib.rs"

[[bin]]
name = "cli_bin"
path = "src/main.rs"


[dependencies]
diesel = {version="1.4.2", features=["postgres"]}
dotenv = "0.14.1"
failure = "0.1.5"
failure_derive = "0.1.5"
clap = "2.33.0"
bcrypt = "0.4"

